--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "**Author:**     Jessica Cassidy",
   "main": "fetch.js",
   "scripts": {
-    "build-css": "tailwindcss build src/styles.css -o public/styles.css"
+    "start": "npm run build:css",
+    "build:css": "tailwindcss build src/styles.css -o public/styles.css"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/cassjsdev/api_cat_facts#readme",
   "dependencies": {
-    "tailwindcss": "^2.0.3"
+    "autoprefixer": "^10.2.5",
+    "tailwindcss": "^2.0.4"
   }
 }
